Merge `master` into `hts-contracts` (#2641)
* [maven-release-plugin] Create release branch

Signed-off-by: tinker-michaelj <michael.tinker@hedera.com>

* Disable FCOTMR

Signed-off-by: tinker-michaelj <michael.tinker@hedera.com>

* Roll to 0.21.0-alpha.1 version

Signed-off-by: tinker-michaelj <michael.tinker@hedera.com>

* Fix license header

Signed-off-by: tinker-michaelj <michael.tinker@hedera.com>

* [maven-release-plugin] Prepare release

Signed-off-by: tinker-michaelj <michael.tinker@hedera.com>

* [maven-release-plugin] Prepare for next dev iteration

Signed-off-by: tinker-michaelj <michael.tinker@hedera.com>

* Enhance YAHCLI to set log level (#2520)

* enhance yahcli to set log level

Signed-off-by: anighanta <anirudh.ghanta@hedera.com>

* make ConfigManager.from method private to package instead of public

Signed-off-by: anighanta <anirudh.ghanta@hedera.com>

* undo local testing changes

Signed-off-by: anighanta <anirudh.ghanta@hedera.com>

* Bump dagger from 2.40.1 to 2.40.3 (#2532)

* Bump junit5.version from 5.8.1 to 5.8.2 (#2531)

* Initial cherry-pick

Signed-off-by: tinker-michaelj <michael.tinker@hedera.com>

* Fix compile errors

Signed-off-by: tinker-michaelj <michael.tinker@hedera.com>

* Fix unit tests

Signed-off-by: tinker-michaelj <michael.tinker@hedera.com>

* Use 0.21.0-alpha.2 SDK

Signed-off-by: tinker-michaelj <michael.tinker@hedera.com>

* Switch to 0.21.0-alpha.2 SDK

Signed-off-by: tinker-michaelj <michael.tinker@hedera.com>

* Rebase initial SideEffectsTracker PR

Signed-off-by: tinker-michaelj <michael.tinker@hedera.com>

* Port child record management and streaming

Signed-off-by: tinker-michaelj <michael.tinker@hedera.com>

* Fix code smells

Signed-off-by: tinker-michaelj <michael.tinker@hedera.com>

* Fix javadoc

Signed-off-by: tinker-michaelj <michael.tinker@hedera.com>

* Fix record fee

Signed-off-by: tinker-michaelj <michael.tinker@hedera.com>