@@ -46,7 +46,6 @@ import static com.hedera.services.legacy.core.jproto.JKey.equalUpToDecodability;
 import static com.hedera.services.state.merkle.MerkleAccountState.DEFAULT_MEMO;
 import static com.hedera.services.utils.MiscUtils.describe;
 import static java.util.Collections.unmodifiableList;
-import static java.util.stream.Collectors.toList;
 
 public class MerkleToken extends AbstractMerkleLeaf implements Keyed<EntityNum> {
 	static final int RELEASE_0120_VERSION = 2;
@@ -682,7 +681,7 @@ public class MerkleToken extends AbstractMerkleLeaf implements Keyed<EntityNum> 
 
 	public void setFeeScheduleFrom(List<CustomFee> grpcFeeSchedule) {
 		throwIfImmutable("Cannot change this token's fee schedule from grpc if it's immutable.");
-		feeSchedule = grpcFeeSchedule.stream().map(FcCustomFee::fromGrpc).collect(toList());
+		feeSchedule = grpcFeeSchedule.stream().map(FcCustomFee::fromGrpc).toList();
 	}
 
 	public void setFeeScheduleKey(final JKey feeScheduleKey) {
